--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <div id="aboutMe" class="container minHeight-100vh border-neon p-5 mb-5 backgroundSemiBlack">
+        <div id="aboutMe" class="container minHeight-100vh border-neon p-5 mb-5 backgroundSemiBlack minHeight-50vh">
             <div class="row">
                 <div class="col">
                     <h1 class="pb-5">About Me</h1>
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div id="myProjects" class="container minHeight-100vh border-neon p-5 my-5 backgroundSemiBlack">
+        <div id="myProjects" class="container minHeight-100vh border-neon p-5 my-5 backgroundSemiBlack minHeight-50vh">
             <div class="row">
                 <div class="col">
                     <h1 class="pb-5">My Projects</h1>
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </div>
-        <div id="hobbies" class="container minHeight-100vh p-5 my-5 backgroundSemiBlack border-invis">
+        <div id="hobbies" class="container minHeight-100vh p-5 my-5 backgroundSemiBlack border-invis minHeight-50vh">
             <div class="row">
                 <div class="col">
                     <h1 class="pb-5">Hobbies</h1>
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </div>
-        <div id="gallery" class="container minHeight-100vh p-5 my-5 backgroundSemiBlack">
+        <div id="gallery" class="container minHeight-100vh p-5 my-5 backgroundSemiBlack minHeight-50vh">
             <div class="row">
                 <div class="col">
                     <h1 class="pb-5">Gallery</h1>
