--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         </div>
         <div class="container backgroundSemiBlack minHeight-3vh" id="myNav">
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-lg-3">
                     <a class="mx-5 p-1 rounded myNavlink" href="#aboutMe">About Me</a>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-lg-3">
                     <a class="mx-5 p-1 rounded myNavlink" href="#myProjects">Projects</a>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-lg-3">
                     <a class="mx-5 p-1 rounded myNavlink" href="#hobbies">Hobbies</a>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-lg-3">
                     <a class="mx-5 p-1 rounded myNavlink" href="#gallery">Gallery</a>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="col-8">
                     <p class="">
-                        This website is made as a practice for vanilla html, css and javascript.
+                        This website was first made as a practice for vanilla html, css and javascript. Now added with bootstrap and jquery.
                     </p>
                 </div>
             </div>
